# app_lvgl_demo

./: CMakeLists.txt  README.md
amp_monitor/: CMakeLists.txt  client.c  main.h  monitor.c  rpmsg.c
flexbus/: CMakeLists.txt  fft.c  monitor.c
hal/: evdev.c  evdev.h  hal_sdl.c  key.c
lv_demo/: CMakeLists.txt  main.c
lvgl/: lv_port_indev.c
motor_demo/: main.c  main.h  ml_label.c
motor_demo/deprecated/: main.c  position_control.c  speed_control.c
rk_demo/: CMakeLists.txt  S00-lv_demo  S99-rk_demo  main.c  main.h  ui_btnmatrix.c  ui_btnmatrix.h  ui_common.c  ui_resource.h
rk_demo/asr/: audio.c
rk_demo/asr/lib/: rkaudio_preprocess.h
rk_demo/furniture_control/: coffee_machine.c  furniture_control_ui.c  icebox_ui.c  player_ui.c
rk_demo/home/: home_ui.c  home_ui.h
rk_demo/include/: RkBle.h  RkBtBase.h  RkBtSink.h  Rk_wifi.h
rk_demo/intercom_homepage/: ui_intercom_homepage.c
rk_demo/intercom_homepage/intercom_call/: ui_intercom_call.c
rk_demo/intercom_homepage/video_monitor/: ui_monitor.c
rk_demo/rockit/: audio_client.c  audio_in.c  audio_out.c  audio_server.c
rk_demo/setting/: language_and_date_ui.c  setting_ui.c  wallpaper_ui.c  wifi_ui.c
rk_demo/smart_home/: control_ui.c  control_ui.h  info_ui.c  info_ui.h  music_ui.c  music_ui.h  smart_home_ui.c
rk_demo/wifibt/: bt.c  bt_server.c  wifi_server.c  wifibt.c  wifibt.h
sys/: cpu.c  soc.c
tools/: pre-commit
